# another_image_viewer

./: .clang-tidy  .gitignore  ImageLoaderPolicy.hpp  ImageViewerApp.hpp  Makefile  README.md  aiv.cpp  aiv.desktop  argparse.hpp  cacheFilenames.hpp  command.hpp  compile_commands.json  createFont.hpp  filesUtils.hpp  meson.build  monads.hpp  parseArguments.hpp  parseConfig.hpp  sdlUtils.hpp  typesDefinition.hpp
.cache/clangd/index/: aiv.cpp.570CB011BC7D781B.idx  cacheFilenames.hpp.C150F9391FED3EEA.idx  command.hpp.1B69BAE8968C1E93.idx  createFont.hpp.A404FD8B3E5AB361.idx  fileUtilsTests.cpp.0115C350C11ECBFB.idx  filesUtils.hpp.629A537837FB3AE1.idx  parseArguments.hpp.A7EC9786BF055D04.idx  typesDefinition.hpp.C389F14656148BB0.idx
tests/: fileUtilsTests.cpp  meson.build
